--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^10.11.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
@@ -19,6 +20,7 @@
     "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^6.23.0",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.10.8",
     "swiper": "^11.1.1"
   },
   "devDependencies": {
