--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@material-tailwind/react": "^2.1.9",
     "firebase": "^10.11.1",
+    "framer-motion": "^11.2.0",
     "localforage": "^1.10.0",
+    "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-awesome-slider": "^4.1.0",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.2.1",
     "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^6.23.0",
