--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.9",
+    "axios": "^1.6.8",
     "firebase": "^10.11.1",
     "framer-motion": "^11.2.0",
     "localforage": "^1.10.0",
